Fix file picker jumpiness by fixing the first two columns
Closes #261

--- a/app/styles/modals.scss
+++ b/app/styles/modals.scss
@@ -196,3 +196,11 @@
  .table.file-picker tr td {
     border: none;
  }
+
+ .table.file-picker td:nth-child(1) {
+    width: 1rem;
+ }
+
+ .table.file-picker td:nth-child(2) {
+    width: 1rem;
+}
